--- a/03eyegaze.Rmd
+++ b/03eyegaze.Rmd
@@ -93,28 +93,10 @@ It's possible to do a secondary analysis combining some of these AOIs (in partic
 
 
 # Data Cleaning
-This is my process of documenting how I'm weeding through data and making sure all's good. Let's visualize first of all. 
-```{r}
-# Reduce dataset to face AOIs only
-data.face <- select(data,-upperchest,-midchest,-lowerchest,-belly,-left,-right)
-# Reshape data so we can easily facet our charts based on face AOIs
-data.face <- data.face %>% gather(aoi,looking,forehead:chin)
-# Graph!
-ggplot(data.face,aes(x=maingroup,y=looking,fill=direction)) +
-  geom_boxplot() +
-  theme(axis.text.x=element_text(angle=45,hjust=1)) +
-  facet_wrap("aoi")
-```
-Okay, right away I see some issues - I want to check for outliers but I'm not sure what could count as an outlier. All 4 stories are different lengths - a data point at 30 seconds would be fine for King Midas (0:37) but impossible for Red Riding Hood (0:18) so outliers need to be *relative* to the story length itself. Let's back up and do histograms for each story. 
+This is my process of documenting how I'm weeding through data and making sure all's good.
+[Change 18 Sep 2017] I deleted half of these...just cutting out the fat. 
 
-```{r}
-ggplot(data.face,aes(x=looking)) +
-  geom_histogram(binwidth=1) +
-  facet_wrap("story") +
-  xlab("secs") +
-  ggtitle("Face AOI sums for each story for each participant")
-```
-Loooks good but I see weird outliers for Red Riding Hood (before Cinderalla too, which I fixed) - those single data points are past the video length (and that's just the face AOIs!). Let's sum up *all* AOIs across each story for each participant...back to the big dataset, and we'll do histograms again.
+Let's sum up *all* AOIs across each story for each participant...back to the big dataset, and we'll do histograms
 ```{r}
 # data2 <- data %>%
 #   group_by(id,story) %>%
@@ -193,14 +175,8 @@ difference <- originalrows - nrow(data)
 ```
 So `r difference` stories were dropped from the previous total of `r originalrows` stories for a new total of `r nrow(data)` stories. 
 
-**I'm also dropping Sara's data too until we fix it**
-```{r}
-data <- filter(data,participant!="Sara")
-```
-
-
 ## Percentage Data and Viz
-We need to work with percentages, because of participants' idiosyntractic eye behavior. Some blink a lot, some don't, so automatically the maximum number of eye gaze data points each participant is able to contribute is different. For that reason we work with percent of total data points on a per-participant basis. That's also why we took out stories with <25% looking data. Now here's the boxplots for each AOI.
+We need to work with percentages, because of participants' idiosyntractic eye behavior. Some blink a lot, some don't, so automatically the maximum number of eye gaze data points each participant is able to contribute is different. For that reason we work with percent of total data points on a per-participant basis. That's also why we took out stories with <25% looking data. And I will save this as `cleanpercentdata.csv.` Now here's the boxplots for each AOI.
 ```{r}
 # data2 uses percentage data!
 data2 <- data %>%
@@ -210,6 +186,9 @@ data2 <- data %>%
 
 ggplot(data2, aes(x=aoi,y=percent)) +
   geom_boxplot() 
+
+write.csv(data2,"cleanpercentdata.csv",row.names=FALSE)
+
 ```
 
 But we should also look at histograms of percentage data. Those should have more normal-like distributions for the high-hitting AOIs, unlike the actual looking data in seconds which has a upper limit.  
@@ -236,7 +215,7 @@ Based on the boxplot there are five AOIs that got hit the most: forehead, eyes, 
 
 *Important reference levels*
 - AOI reference level is eyes
-- MainGroup reference level is NativeDeaf
+- MainGroup reference level is DeafNative
 
 Creating the `data.big5` thing here. 
 ```{r}
@@ -246,7 +225,7 @@ data.big5 <- filter(data2,aoi == "forehead" | aoi == "eyes"
   mutate(aoi = as.factor(aoi))
 data.big5$aoi <- factor(data.big5$aoi, levels=c("upperchest","chin","mouth","eyes","forehead"))
 data.big5$aoi <- relevel(data.big5$aoi, ref="eyes")
-data.big5$maingroup <- relevel(data.big5$maingroup, ref="NativeDeaf")
+data.big5$maingroup <- relevel(data.big5$maingroup, ref="DeafNative")
 ```
 
  
@@ -385,7 +364,7 @@ data.face3 <- filter(data2, aoi == "eyes" | aoi == "mouth" | aoi == "chin") %>%
   mutate(aoi = as.factor(aoi))
 data.face3$aoi <- factor(data.face3$aoi, levels=c("eyes","mouth","chin"))
 #data.face3$aoi <- relevel(data.face3$aoi, ref="eyes")
-data.face3$maingroup <- relevel(data.face3$maingroup, ref="NativeDeaf")
+data.face3$maingroup <- relevel(data.face3$maingroup, ref="DeafNative")
 
 data.face3.item <- data.face3 # save item-level data for later
 
@@ -492,7 +471,7 @@ Let's go for it. Creating the `data.lr` thing here. And again because we're stil
 # Make LR df with reference levels
 data.lr <- filter(data2,aoi == "left" | aoi == "right") %>%
   mutate(aoi = as.factor(aoi))
-data.lr$maingroup <- relevel(data.lr$maingroup, ref="NativeDeaf")
+data.lr$maingroup <- relevel(data.lr$maingroup, ref="DeafNative")
 
 data.lr.item <- data.lr # save item-level data for later
 
