added SEM plot for lex recall

--- a/04resultsection.Rmd
+++ b/04resultsection.Rmd
@@ -145,8 +145,13 @@ data.acc2 <- data.acc %>%
   spread(direction,mean) %>%
   rename(forward.mean = forward,
          reversed.mean = reversed)
+groupcount <- select(groupmeans,maingroup,n)
 data.acc <- left_join(data.acc2,data.acc1, by="maingroup") %>%
-  select(maingroup,forward.mean,forward.sd,reversed.mean,reversed.sd)
+  left_join(groupcount, by="maingroup") %>%
+  # mutate(forward.se = forward.sd/sqrt(n),
+  #        reversed.se = reversed.sd/sqrt(n)) %>%
+  #select(maingroup,n,forward.mean,forward.sd,forward.se,reversed.mean,reversed.sd,reversed.se)
+  select(maingroup,n,forward.mean,forward.sd,reversed.mean,reversed.sd)
 #data.acc
 kable(data.acc, digits=2) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
 ```
@@ -156,6 +161,26 @@ ggplot(data,aes(maingroup,acc,fill=direction)) +
   geom_boxplot() +
   scale_y_continuous(limits=c(0,1)) +
   theme(axis.text.x=element_text(angle=45,hjust=1))
+```
+And Rain wanted the error plot so here it is. Lines represent SEM. Good to have this too!
+
+```{r}
+data.acc1 <- data.acc1 %>% 
+  ungroup() %>% 
+  gather(direction,sd,forward.sd:reversed.sd) %>%
+  mutate(direction = str_sub(direction,1,-4))
+data.acc2 <- data.acc2 %>% 
+  ungroup() %>% 
+  gather(direction,mean,forward.mean:reversed.mean) %>%
+  mutate(direction = str_sub(direction,1,-6))
+data.acc.se <- left_join(data.acc1,data.acc2, by=c("maingroup","direction")) %>%
+  left_join(groupcount, by="maingroup") %>%
+  mutate(se = sd/sqrt(n))
+ggplot(data.acc.se,aes(maingroup,mean,color=direction)) +
+  geom_point(position=position_dodge(0.5)) +
+  geom_errorbar(aes(ymin=mean-se,ymax=mean+se),width=0.1,position=position_dodge(0.5)) +
+  scale_y_continuous(limits=c(0,1)) +
+  theme(axis.text.x=element_text(angle=45,hjust=1)) + xlab("") + ylab("mean accuracy")
 ```
 
 # Eye Gaze Data, Summarized. 
@@ -258,3 +283,16 @@ I like the idea of treating Native Deaf as baseline or the gold standard in comp
 ## Forward ANOVA
 
 ## Reversed ANOVA
+
+# Other Notes from Rain
+3) If you do LLM or ANCOVA, do so with AoA, and without subject group or hearing status.  I would set aside any stats you did with both Hearing Status and AoA, I don't think you can do that.  
+ 
+How come lexical recall isn’t a predictor in a model with gaze data?  Yes, that is an important goal of the paper.
+ 
+Here is an example of what I had noted to myself previously, which is not current any more, and I would put correlation values in here:
+
+-Bivariate correlations were calculated for all subjects, irrespective of hearing status (which we address in a later section).  Surprisingly, for no AOI was looking behavior was correlated with accuracy, for either forward or reversed stories. 
+-Remarkably, percent-looking at mid chest and lower chest, for both forward and reversed (and left side for reversed) are highly negatively correlated with years signing and positively correlated with AoA. That means that greater looking in those areas are associated with older ages of acquisition and fewer years of experience.  What is equally interesting is that looking at the eyes was not related to subject characteristics at all (contrast with Emmorey’s finding). 
+-Also, looking at the mouth for reversed stimuli was significantly correlated with years signing (r = 0.38), this means the longer one signed, the more (in terms of % looking) one looked at the mouth.
+
+Then, maybe we can have a section called “Hearing Status” and in this paragraph say what happens when we compare hearing and deaf, using the same range of AoA, excluding hearing Novice.    Or maybe separate regressions for hearing and deaf groups, looking at AoA, AOI’s, and lexical recall, to examine the relationship between the three.    I don't know.
